# 2026_ai_rookie_course11

./: .gitignore  README.md  lab0_setup.py  lab1_baseline.py  lab2_data_collator.py  lab3_train.py  lab4_evaluate.py  lab5_deploy.py  pyproject.toml
solutions/: lab1_solution.py  lab2_solution.py  lab3_solution.py  lab4_solution.py  lab5_solution.py
utils/: __init__.py  metrics.py
