[project]
name = "vlm-sft-lab"
version = "0.1.0"
description = "VLM Supervised Fine-Tuning Lab - Qwen2.5-VL-3B Receipt Extraction"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.11.0",
    "torchvision",
    "transformers>=4.49.0",
    "accelerate>=1.3.0",
    "peft>=0.14.0",
    "trl>=0.13.0",
    "bitsandbytes>=0.49.0",
    "datasets",
    "pillow",
    "tensorboard",
    "matplotlib",
    "edit-distance",
    "qwen-vl-utils",
    "tqdm",
    "gradio",
]

[tool.uv]
index-url = "https://download.pytorch.org/whl/cu130"
extra-index-url = ["https://pypi.org/simple"]
